# zeropilot

./: .gitignore  LICENSE  README.md
evm-contracts/: foundry.toml
evm-contracts/src/: OmniExecutor.sol
evm-contracts/src/interfaces/: ILayerZeroEndpoint.sol
evm-contracts/test/: OmniExecutor.t.sol
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(application)/: layout.tsx  page.tsx
frontend/app/(application)/dashboard/: page.tsx
frontend/app/(application)/docs/: page.tsx
frontend/app/actions/: waitlist.ts
frontend/components/: features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  swap-interface.tsx  transaction-status.tsx  use-cases.tsx  waitlist-modal.tsx  waitlist.tsx  wallet-connect.tsx  work-in-progress-alert.tsx
frontend/components/icons/: layerzero-icon.tsx
solana-program/: Anchor.toml  package.json
solana-program/programs/solana-program/: Cargo.toml
solana-program/programs/solana-program/src/: lib.rs
solana-program/tests/: solana-program.js
zeropilot-contracts/: .env.example  Anchor.toml  README.md  documentation.txt  hardhat.config.ts  keypair.txt  layerzero.config.ts  pnpm-lock.yaml
zeropilot-contracts/deployments/holesky-testnet/: MyOFT.json  MyOFTMock.json
zeropilot-contracts/deployments/solana-testnet/: OFT.json
zeropilot-contracts/programs/endpoint-mock/src/: lib.rs
zeropilot-contracts/programs/oft/src/: lib.rs
zeropilot-contracts/tasks/evm/: mint.ts
zeropilot-contracts/tasks/solana/: mintOFT.ts
