[package]
name = "zeropilot"
version = "0.1.0"
description = "Cross-Chain Wallet System using LayerZero V2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zeropilot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
